tests/ui/errors/remap-path-prefix.normal.stderr
error[E0425]: cannot find value `ferris` in this scope
  --> remapped/errors/remap-path-prefix.rs:19:5
   |
LL |     ferris
   |     ^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
